--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>口袋天空|SkyPocket</title>
 </head>
 <body>
-  <h1>口袋天空|SkyPocket</h1>
+  <acronym title="一个养老的Minecraft服务器">
+    <h1>口袋天空|SkyPocket</h1>
+  </acronym>
 </body>
 </html>
