--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <acronym title="一个养老的Minecraft服务器">
-    <h1>口袋天空|SkyPocket</h1>
+    口袋天空|SkyPocket
   </acronym>
 </body>
 </html>
