--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <title>口袋天空|SkyPocket</title>
 </head>
 <body>
-  <acronym title="一个养老的Minecraft服务器">
-    口袋天空|SkyPocket
-  </acronym>
+
+    <h1>口袋天空|SkyPocke</h1>
 </body>
 </html>
