--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>口袋天空|SkyPocket</title>
 </head>
 <body>
-
+<div style="background:url('https://s1.ax1x.com/2020/03/12/8e0RxS.jpg') no-repeat;width:100%;height:auto">添加文字...添加文字...添加文字...</div>
     <h1>口袋天空|SkyPocke</h1>
 </body>
 </html>
