--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <title>口袋天空|SkyPocket</title>
 </head>
 <body>
-<div style="background:url('https://s1.ax1x.com/2020/03/12/8e0RxS.jpg') no-repeat;width:100%;height:auto"></div>
+
+<div class = "example" >
+<img src=https://s1.ax1x.com/2020/03/12/8e0RxS.jpg>
+<p>万里长城</p>
+</div>
 </body>
 </html>
