--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 </head>
 <body>
 
-<div class = "example" >
-<img src=https://s1.ax1x.com/2020/03/12/8e0RxS.jpg>
-<p>万里长城</p>
-</div>
+<div style="background:url('https://s1.ax1x.com/2020/03/12/8e0RxS.jpg') no-repeat;width:100%;height:auto"></div>
 </body>
 </html>
