--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
-<div style="background:url('https://s1.ax1x.com/2020/03/12/8e0RxS.jpg') no-repeat;width:100%;height:auto"></div>
+<img src="https://s1.ax1x.com/2020/03/12/8e0RxS.jpg"
+width="100%"
+hight=auto/>
 </body>
 </html>
