--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 
-<img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg"
-width="101%"/>
+<body background="http://www.w3school.com.cn/clouds.gif">
   11
 </body>
 </html>
