--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<body background="http://www.w3school.com.cn/clouds.gif">
+<body background="https://s1.ax1x.com/2020/03/12/8exHBT.jpg">
   11
 </body>
 </html>
