--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>口袋天空|SkyPocket</title>
+  <link rel="icon" href="SP/1.ico" type="image/x-icon">
   <link href="SP/back.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
