--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-<body background="https://s1.ax1x.com/2020/03/12/8exHBT.jpg">
-  11
+#bgImg {
+  height: 100%;
+  width: 100%;
+  background: url('https://s1.ax1x.com/2020/03/12/8exHBT.jpg') no-repeat;
+  background-size: cover;
+  position: absolute;
+  overflow: hidden;
+}
 </body>
 </html>
