--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
 </head>
 <body>
 
-#bgImg {
-  height: 100%;
-  width: 100%;
-  background: url('https://s1.ax1x.com/2020/03/12/8exHBT.jpg') no-repeat;
-  background-size: cover;
-  position: absolute;
-  overflow: hidden;
-}
+<div id="Layer1" style="position:fixed;z-index:-100; left:0px; top:0px; width:100%; height:100%">
+        <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg"/>
+    </div>
 </body>
 </html>
