--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-<div id="Layer1" style="position:fixed;z-index:-100; left:0px; top:0px; width:100%; height:100%">
-        <img src=https://s1.ax1x.com/2020/03/12/8exHBT.jpg/>
-    </div>
+<div id="Layer1" style="position:absolute; width:100%; height:auto; z-index:-1">  
+<img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
+ </div>
+
 </body>
 </html>
