--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <div id="Layer1" style="position:absolute; width:100%; height:auto; z-index:-1">  
 <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
  </div>
- <iframe id="b" class="b video_pc" src="https://www.bilibili.com/html/html5player.html?cid=24237876&aid=14875829&pre_ad=0" frameborder="0" allowfullscreen="true">
-</iframe>  
+<iframe src="//player.bilibili.com/player.html?aid=63527629&cid=110311765&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 </body>
 </html>
