--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link href="SP/back.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+ <script src="http://www.lmlblog.com/winter/templets/xq/js/snowy.js"></script>
+<script src="http://www.lmlblog.com/blog/14/js/Snow.js"></script>
+<style type="text/css">
+.snow-container{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:100001;}
+</style>
+<div class="snow-container"></div>
 
 <div id="Layer1" style="position:absolute; width:100%; height:auto; z-index:-1">  
 <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
