--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-
+<h1 align="left">This is heading 1</h1>
 <div id="Layer1" style="position:absolute; width:100%; height:auto; z-index:-1">  
 <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
  </div>
