--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
  </div>
 <iframe src="//player.bilibili.com/player.html?aid=63527629&cid=110311765&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width:500px;height:330px"> </iframe>
-<h1 align="right">This is heading 1</h1>
+<h1 align="right" class="OrangeRed">This is heading 1</h1>
 </body>
 </html>
