--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>口袋天空|SkyPocket</title>
+ <link rel="icon" type="image/png" sizes="32x32" href="SP/1.ico"/>
+<link rel="apple-touch-icon" type="image/png" sizes="32x32" href="SP/1.ico"/>
 </head>
 <body>
 
