--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <title>口袋天空|SkyPocket</title>
  <link rel="icon" type="image/png" sizes="32x32" href="SP/1.ico"/>
 <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="SP/1.ico"/>
+ <style>
+  .OrangeRed{
+   color:OrangeRed;
+   front-size:20px;}
+   <style>
 </head>
 <body>
 
