--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  <link rel="icon" type="image/png" sizes="32x32" href="SP/1.ico"/>
 <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="SP/1.ico"/>
  <style>
-  .OrangeRed{
-   color:OrangeRed;
+  .orangered{
+   color:orangered;
    front-size:20px;}
    </style>
 </head>
@@ -18,6 +18,6 @@
 <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
  </div>
 <iframe src="//player.bilibili.com/player.html?aid=63527629&cid=110311765&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width:500px;height:340px"> </iframe>
-<h1 align="right" class="OrangeRed">一个十分养老的Minecraft公益服务器</h1>
+<h1 align="right" class="orangered">一个十分养老的Minecraft公益服务器</h1>
 </body>
 </html>
