--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <a href="http://sky.mcking.cc/暗黑战神-我的世界V3.0-请右键解压缩.rar" target="_blank">备用下载</a>
             
         </div>
+    </div>
+</div>
 
 <div id="Layer1" style="position:absolute; width:100%; height:auto; z-index:-1">  
 <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
