--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="top">
     <div class="wrap ovf">
-        <a class="fl logo" href="index.html" target="_blank"><img src="http://mcking-web.test.upcdn.net/icon_logo.png"></a>
+        <a class="fl logo" href="index.html" target="_blank"><img src="https://s1.ax1x.com/2020/03/13/8n3NiF.png"></a>
         <div class="fr">
 			<a id="down" target="_blank">高速下载</a>
             <a href="http://sky.mcking.cc/暗黑战神-我的世界V3.0-请右键解压缩.rar" target="_blank">备用下载</a>
