--- a/index.html
+++ b/index.html
@@ -22,7 +22,44 @@
         </div>
     </div>
 </div>
+<div class="main ovf">
+    <div class="middle ovf">
+        <div class="wrap">
+            <h1>我的世界 暗黑战神<img class="txt-1" src="http://mcking-web.test.upcdn.net/txt1.png"></h1>
+<div class="divcss5">
+            <a class="btn-download" href="http://sky.mcking.cc/暗黑战神-我的世界V3.0-请右键解压缩.rar" target="_blank">立即下载</a>
+            <a class="btn-pay" href="http://www.mcking.cc/pay" target="_blank">赞助我们</a>         
+        </div>
+            <p class="txt txt-2">三大副本世界，七大地下城，二十三个深渊副本</p>
+            <p class="txt txt-3">国战！阵营！炫酷3D材质包，巅峰属性技能点</p>
+        </div>
+        <hr>
 
+        <div class="wrap ovf">
+            <p class="txt txt-4"><span>“暗黑战神”</span>  打造一流RPG服务器</p>
+
+                        <div class="advantage ovf">
+                <div class="name fl">
+                    <p><i class="icon icon-dx"></i>游戏质量</p>
+                    <p><i class="icon icon-yx"></i>玩家群体</p>
+                    <p><i class="icon icon-dl"></i>游玩体验</p>
+                    <p><i class="icon icon-fwq"></i>服务器</p>
+                </div>
+                <div class="bad fl">
+                    <p><i class="icon icon-bad"></i>普通插件，玩法单一</p>
+                    <p><i class="icon icon-bad"></i>玩家年龄低，熊孩子多</p>
+                    <p><i class="icon icon-bad"></i>游戏卡顿，掉线，BUG</p>
+                    <p><i class="icon icon-bad"></i>面板服，VPS，租借服</p>
+                </div>
+                <div class="vs fl">VS</div>
+                <div class="good fl">
+                    <p><i class="icon icon-good"></i>自主开发，专业的策划运营团队</p>
+                    <p><i class="icon icon-good"></i>普遍15岁以上，有兄弟，靠得住</p>
+                    <p><i class="icon icon-good"></i>流畅，淋漓尽致的游戏体验</p>
+                    <p><i class="icon icon-good"></i>E5双路32核心处理器，192GB内存服务器</p>
+                </div>
+            </div>
+        </div>
 <div id="Layer1" style="position:absolute; width:100%; height:auto; z-index:-1">  
 <img src="https://s1.ax1x.com/2020/03/12/8exHBT.jpg" height="100%" width="100%"/>  
  </div>
