--- a/index.html
+++ b/index.html
@@ -1,119 +1,54 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
+<!DOCTYPE html><!-- DTD文档类型声明为HTML5版本的格式 -->
+<html lang="zh-CN"><!--指定为中文网站，主要避免触发谷歌浏览器翻译功能-->
+<!-- 更加标准的 lang 属性写法 http://zhi.hu/XyIa -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>我的世界Minecraft-暗黑战神-第七空间</title>
-    <meta name="keywords" content="我的世界暗黑战神,第七空间,我的世界,我的世界暗黑战神下载,Minecraft">
-    <meta name="description" content="我的世界暗黑战神，我的世界，我的世界联机服务器，Minecraft服务器，RPG服务器">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="renderer" content="webkit">
-	<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?f1afc11f3bcd550ca4c321941169563c";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-    <link href="http://sky.mcking.cc/res/css/index.css" rel="stylesheet" type="text/css">
-
+    <!-- 字符编码写法 优于 html4.01的<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> -->
+    <meta charset="UTF-8">
+    <!-- 网站标题，最好在自己使用对应框架的路由拦截中每次设置不同的标题较好 -->
+    <title>Condor Hero</title>
+    <!-- 用于告诉搜索引擎，你网页的关键字，特别有用 -->
+    <meta name="keywords"  content="简书,简书官网,图文编辑软件,简书下载,图文创作,创作软件,原创社区,小说,散文,写作,阅读">
+    <!-- 网页作者，一般放在keywords之下 -->
+    <meta name="author" content="重庆派臣科技有限公司,https://www.paichen.net/" />
+    <!-- 用于告诉搜索引擎，你网站的主要内容。不超过150个字符 -->
+    <meta name="description"  content="简书是一个优质的创作社区，在这里，你可以任性地创作，一篇短文、一张照片、一首诗、一幅画……我们相信，每个人都是生活中的艺术家，有着无穷的创造力。">
+    <!-- 移动端网页布局必备 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 用于告知浏览器以何种版本来渲染页面 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/><!-- 指定IE和Chrome使用最新版本渲染当前页面 -->
+    <!-- renderer是为双核浏览器准备的，用于指定双核浏览器默认以何种方式渲染页面。比如说360浏览器。 -->
+    <meta name="renderer" content="webkit"/><!--默认webkit内核-->
+    <!-- Start of Baidu Transcode -->
+    <!-- 移动端专用禁止百度转码乱加广告导致页面布局散了，此方法并不能百分之百有效 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta http-equiv="Cache-Control" content="no-transform" />
+    <!-- 此网站可同时适合在移动设备和电脑上进行浏览会自动适配 -->
+    <meta name="applicable-device" content="pc,mobile">
+    <!-- 微软的老式浏览器 -->
+    <meta name="MobileOptimized" content="width"/>
+    <!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
+    <meta name="HandheldFriendly" content="true"/>
+    <meta name="mobile-agent" content="format=html5;url=https://www.jianshu.com/">
+    <!-- End of Baidu Transcode -->
+    <!-- robots用来告诉爬虫哪些页面需要索引，哪些页面不需要索引content默认是all搜索引擎将索引此网页与继续通过此网页的链接索引。 -->
+    <meta name="robots" content="all" />
+    <!-- 快捷方式图标推荐大小为32x32 -->
+    <link href="//cdn2.jianshu.io/assets/favicons/favicon-e743bfb1821442341c3ab15bdbe804f7ad97676bd07a770ccc9483473aa76f06.ico" rel="shortcut icon" type="image/x-icon">
+    <!-- iOS 设备 begin -->
+    <!-- 添加到主屏后的标题（iOS 6 新增） -->
+    <meta name="apple-mobile-web-app-title" content="标题">
+    <!-- IOS 设备可以使用添加到主屏按钮将网站添加到主屏幕上apple-touch-icon-precomposed用来设置主屏幕上的图标 -->
+    <link rel="apple-touch-icon-precomposed" href="//cdn2.jianshu.io/assets/apple-touch-icons/57-a6f1f1ee62ace44f6dc2f6a08575abd3c3b163288881c78dd8d75247682a4b27.png" sizes="57x57" />
+    <!-- iPhone 和 iTouch，默认 57x57 像素，必须有 -->
+    <link rel="apple-touch-icon-precomposed" href="//cdn2.jianshu.io/assets/apple-touch-icons/72-fb9834bcfce738fd7b9c5e31363e79443e09a81a8e931170b58bc815387c1562.png" sizes="72x72" />
+    <link rel="apple-touch-icon-precomposed" href="//cdn2.jianshu.io/assets/apple-touch-icons/76-49d88e539ff2489475d603994988d871219141ecaa0b1a7a9a1914f4fe3182d6.png" sizes="76x76" />
+    <link rel="apple-touch-icon-precomposed" href="//cdn2.jianshu.io/assets/apple-touch-icons/114-24252fe693524ed3a9d0905e49bff3cbd0228f25a320aa09053c2ebb4955de97.png" sizes="114x114" />
+    <link rel="apple-touch-icon-precomposed" href="//cdn2.jianshu.io/assets/apple-touch-icons/120-1bb7371f5e87f93ce780a5f1a05ff1b176828ee0d1d130e768575918a2e05834.png" sizes="120x120" />
+    <link rel="apple-touch-icon-precomposed" href="//cdn2.jianshu.io/assets/apple-touch-icons/152-bf209460fc1c17bfd3e2b84c8e758bc11ca3e570fd411c3bbd84149b97453b99.png" sizes="152x152" />
+    <!-- iOS 图标 end -->
+    <meta name="csrf-param" content="authenticity_token" />
+    <meta name="csrf-token" content="sNMk592JV2wwHn6DPJ8C5oy/hHDnjIlZBOHyngtTbpQ=" />
 </head>
-
-
-    <script type="text/javascript" src="https://i.llill.net/download.js"></script>
-<body onload="load();">
-<div class="video-bg">
-    <video width="100%" height="auto" preload="auto" loop="" autoplay="">
-        <source src="http://mcking-web.test.upcdn.net/jdqs.webm" type="video/mp4">
-        <source src="http://mcking-web.test.upcdn.net/jdqs.mp4" type="video/mp4">
-        
-    </video>
-</div>
-<div class="top">
-    <div class="wrap ovf">
-        <a class="fl logo" href="index.html" target="_blank"><img src="http://mcking-web.test.upcdn.net/icon_logo.png"></a>
-        <div class="fr">
-			<a id="down" target="_blank">高速下载</a>
-            <a href="http://sky.mcking.cc/暗黑战神-我的世界V3.0-请右键解压缩.rar" target="_blank">备用下载</a>
-            
-        </div>
-    </div>
-</div>
-<div class="main ovf">
-    <div class="middle ovf">
-        <div class="wrap">
-            <h1>我的世界 暗黑战神<img class="txt-1" src="http://mcking-web.test.upcdn.net/txt1.png"></h1>
-<div class="divcss5">
-            <a class="btn-download" href="http://sky.mcking.cc/暗黑战神-我的世界V3.0-请右键解压缩.rar" target="_blank">立即下载</a>
-            <a class="btn-pay" href="http://www.mcking.cc/pay" target="_blank">赞助我们</a>         
-        </div>
-            <p class="txt txt-2">三大副本世界，七大地下城，二十三个深渊副本</p>
-            <p class="txt txt-3">国战！阵营！炫酷3D材质包，巅峰属性技能点</p>
-        </div>
-        <hr>
-
-        <div class="wrap ovf">
-            <p class="txt txt-4"><span>“暗黑战神”</span>  打造一流RPG服务器</p>
-
-                        <div class="advantage ovf">
-                <div class="name fl">
-                    <p><i class="icon icon-dx"></i>游戏质量</p>
-                    <p><i class="icon icon-yx"></i>玩家群体</p>
-                    <p><i class="icon icon-dl"></i>游玩体验</p>
-                    <p><i class="icon icon-fwq"></i>服务器</p>
-                </div>
-                <div class="bad fl">
-                    <p><i class="icon icon-bad"></i>普通插件，玩法单一</p>
-                    <p><i class="icon icon-bad"></i>玩家年龄低，熊孩子多</p>
-                    <p><i class="icon icon-bad"></i>游戏卡顿，掉线，BUG</p>
-                    <p><i class="icon icon-bad"></i>面板服，VPS，租借服</p>
-                </div>
-                <div class="vs fl">VS</div>
-                <div class="good fl">
-                    <p><i class="icon icon-good"></i>自主开发，专业的策划运营团队</p>
-                    <p><i class="icon icon-good"></i>普遍15岁以上，有兄弟，靠得住</p>
-                    <p><i class="icon icon-good"></i>流畅，淋漓尽致的游戏体验</p>
-                    <p><i class="icon icon-good"></i>E5双路32核心处理器，192GB内存服务器</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="wrap ovf">
-            <p class="txt-4">巅峰RPG体验<span> 游戏美图</span></p>
-            <div class="compare">
-                <div class="fl">
-                                        <img src="http://mcking-web.test.upcdn.net/pic1.jpeg">
-                                                            <img src="http://mcking-web.test.upcdn.net/pic2.jpeg">
-                    <a class="btn-download2" href="http://sky.mcking.cc/暗黑战神-我的世界V3.0-请右键解压缩.rar" target="_blank">下载游戏</a>
-
-                </div>
-                <div class="fl">
-
-                <img src="http://mcking-web.test.upcdn.net/pic3.jpeg">
-                                <img src="http://mcking-web.test.upcdn.net/pic4.jpeg">
-                    <a class="btn-pay2" href="http://www.mcking.cc/pay" target="_blank">赞助我们</a>
-
-                </div>
-                <div class="clear"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="bottom">
-        <div class="fixed-right">
-            <a href="http://wpa.qq.com/msgrd?v=3&amp;uin=896791616&amp;site=qq&amp;menu=yes" target="_blank"><i class="icon icon-kf"></i></a>
-            <a href="https://jq.qq.com/?_wv=1027&k=5Ldthqy" target="_blank"><i class="icon icon-qq"></i></a>
-            <a class="bkt on"><i class="icon icon-bkt"></i><span>返回<br>顶部</span></a>
-        </div>
-        <script src="http://mcking-web.test.upcdn.net/hm.js"></script><script src="http://mcking-web.test.upcdn.net/address.js"></script>
-
-    </div>
-</div>
-
-<script type="text/javascript" src="http://mcking-web.test.upcdn.net/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="http://mcking-web.test.upcdn.net/index.js" defer=""></script>
-
-</body></html>
+<body>
+</body>
+</html>
