--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <!--<link type="text/css" href="SP/back.css" rel="stylesheet"/>-->
+    <!--<link type="text/css" href="back.css" rel="stylesheet"/>-->
 </head>
 <body>
 <div id="header">
