--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
      <div class="box bg-light">
        <i class="fa fa-users fa-3x"></i> 
        <h3>冠军训练师</h3> 
-       <p>sweet_0106<br/>
-        xiaohui
-    
+       <p>cnm<br/>
+        qmzzf
+
     
     </p>
      </div>
@@ -76,8 +76,10 @@
       <div class="box bg-light">
         <i class="fa fa-graduation-cap fa-3x"></i> 
         <h3>管理员列表</h3> 
-        <p>小黑,小灰<br/>
-            麦田
+        <p>Archer<br/>
+           xiaohui_dd
+		piwanyi
+		shaomai_0v0
         </p>
       </div>
  </section>
