--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <i class="fa fa-graduation-cap fa-3x"></i> 
         <h3>管理员列表</h3> 
         <p>Archer<br/>
-           xiaohui_dd
-		piwanyi
+           xiaohui_dd<br/>
+		piwanyi<br/>
 		shaomai_0v0
         </p>
       </div>
