--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
      <div class="box bg-primary">
         <i class="fa fa-leanpub fa-3x"></i> 
         <h3>熊孩子示众榜</h3> 
-        <p>Fengmuyao0203<br/>
-        TNTQaQ<br/><br/><br/>
+        <p><img src="https://n.sinaimg.cn/tech/transform/600/w400h200/20200313/7169-iquxruh6262818.gif" width=210px />
 	      
 	      </p>
       </div>
