--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
      </nav>
      <div id="showcase">
          <div class="container">
+             
             <div class="showcase-content">
                 <h1>欢迎来到<span class="text-primary"> 口袋天空公益服务器</span></h1>
+                <iframe src="http://player.bilibili.com/player.html?aid=63527629&cid=110311765&page=1?rel=0&amp&autoplay=1" atuoplay=0 allowfullscreen="true" width="580px" height="310px" scrolling="yes" frameborder="0"></iframe>
                 <p>超高度还原的关都和城都地区<br/>
 
                     玩家可以自行开设精灵道馆<br/>
@@ -48,6 +50,7 @@
      <div class="info-img"></div>
      <div class="info-content">
          <h2><span class="text-primary">口袋天空</span> 活动介绍</h2>
+         
          <p>挥指功大赛<br/>
             宝可梦大赛[OU,AG,LC]<br/>
             钓鱼大赛<br/>
