--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             钓鱼大赛<br/>
             多轮抓宠比赛<br/>
             逮虾户冰船活动<br/>
-            跑酷解密活动[长期]</p>
+            跑酷解密活动[长期]<br/>
+            <img src="https://tietu.mclists.cn/banner/r.mcstory.cc_35561.jpg" width=450px/>
+        </p>
          <a class="btn btn-light" href="https://jq.qq.com/?_wv=1027&k=5yNabXz">服务器群</a>
      </div>
  </section>
